--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "^2.1.3",
     "@swimlane/ngx-datatable": "^12.0.0",
+    "angular-2-data-table": "^0.1.2",
     "cordova-android": "~7.0.0",
     "cordova-browser": "~5.0.3",
     "cordova-plugin-device": "^2.0.2",
