--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "^2.1.3",
     "@swimlane/ngx-datatable": "^12.0.0",
+    "@types/jquery": "^3.3.2",
     "angular-2-data-table": "^0.1.2",
     "cordova-android": "~7.0.0",
     "cordova-browser": "~5.0.3",
@@ -39,7 +40,10 @@
     "core-js": "^2.5.6",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "moment": "^2.22.1",
+    "ng2-daterangepicker": "^2.0.12",
     "ng2-smart-table": "^1.2.2",
+    "ngx-daterangepicker": "^1.0.1",
     "rxjs": "^5.5.10",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
