--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "^2.1.3",
+    "@nicky-lenaers/ngx-scroll-to": "^0.6.1",
     "@swimlane/ngx-datatable": "^12.0.0",
     "@types/jquery": "^3.3.2",
     "angular-2-data-table": "^0.1.2",
