--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ng2-daterangepicker": "^2.0.12",
     "ng2-smart-table": "^1.2.2",
     "ngx-daterangepicker": "^1.0.1",
+    "ngx-papaparse": "^2.1.4",
     "rxjs": "^5.5.10",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
