--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
+    "@handsontable/angular": "^2.0.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/native-storage": "^4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
@@ -39,6 +40,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.6",
+    "handsontable": "^4.0.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "moment": "^2.22.1",
