--- a/package.json
+++ b/package.json
@@ -44,10 +44,13 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "moment": "^2.22.1",
+    "ng2-completer": "^2.0.8",
     "ng2-daterangepicker": "^2.0.12",
     "ng2-smart-table": "^1.2.2",
     "ngx-daterangepicker": "^1.0.1",
     "ngx-papaparse": "^2.1.4",
+    "primeicons": "^1.0.0-beta.9",
+    "primeng": "^6.0.0",
     "rxjs": "^5.5.10",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
