--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/animations": "5.2.10",
+    "@angular/animations": "^5.2.10",
     "@angular/common": "^5.2.10",
     "@angular/compiler": "5.2.10",
     "@angular/compiler-cli": "5.2.10",
@@ -21,6 +21,7 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
+    "@fortawesome/fontawesome-free": "^5.1.0",
     "@handsontable/angular": "^2.0.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/native-storage": "^4.7.0",
@@ -28,7 +29,7 @@
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "^2.1.3",
     "@nicky-lenaers/ngx-scroll-to": "^0.6.1",
-    "@swimlane/ngx-datatable": "^12.0.0",
+    "@swimlane/ngx-datatable": "11.3.2",
     "@types/jquery": "^3.3.2",
     "angular-2-data-table": "^0.1.2",
     "cordova-android": "~7.0.0",
@@ -40,6 +41,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.6",
+    "font-awesome": "^4.7.0",
     "handsontable": "^4.0.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -48,6 +50,7 @@
     "ng2-daterangepicker": "^2.0.12",
     "ng2-smart-table": "^1.2.2",
     "ngx-daterangepicker": "^1.0.1",
+    "ngx-handsontable": "^0.48.0",
     "ngx-papaparse": "^2.1.4",
     "primeicons": "^1.0.0-beta.9",
     "primeng": "^6.0.0",
@@ -57,7 +60,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
-    "typescript": "~2.6.2"
+    "typescript": "~2.7.2"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -73,5 +76,9 @@
       "android",
       "browser"
     ]
+  },
+  "config": {
+    "ionic_sass": "./config/sass.config.js",
+    "ionic_copy": "./config/copy.config.js"
   }
 }
