--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@handsontable/angular": "^2.0.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/native-storage": "^4.7.0",
+    "@ionic-native/screen-orientation": "^4.9.2",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "^2.1.3",
@@ -32,12 +33,14 @@
     "@swimlane/ngx-datatable": "11.3.2",
     "@types/jquery": "^3.3.2",
     "angular-2-data-table": "^0.1.2",
+    "cordova": "^8.0.0",
     "cordova-android": "~7.0.0",
     "cordova-browser": "~5.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-nativestorage": "^2.3.1",
+    "cordova-plugin-screen-orientation": "^3.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.6",
@@ -70,7 +73,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-nativestorage": {}
+      "cordova-plugin-nativestorage": {},
+      "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
       "android",
