--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@handsontable/angular": "^2.0.0",
     "@ionic-native/call-number": "^4.10.1",
     "@ionic-native/core": "4.7.0",
+    "@ionic-native/file": "^4.12.0",
+    "@ionic-native/file-transfer": "^4.12.0",
     "@ionic-native/native-storage": "^4.7.0",
     "@ionic-native/screen-orientation": "^4.9.2",
     "@ionic-native/splash-screen": "4.7.0",
@@ -51,6 +53,7 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "moment": "^2.22.1",
+    "ng-spin-kit": "^5.1.1",
     "ng2-completer": "^2.0.8",
     "ng2-daterangepicker": "^2.0.12",
     "ng2-smart-table": "^1.2.2",
@@ -60,6 +63,7 @@
     "primeicons": "^1.0.0-beta.9",
     "primeng": "^6.0.0",
     "rxjs": "^5.5.10",
+    "spinkit": "^1.2.5",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
@@ -77,7 +81,9 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-nativestorage": {},
       "cordova-plugin-screen-orientation": {},
-      "mx.ferreyra.callnumber": {}
+      "mx.ferreyra.callnumber": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {}
     },
     "platforms": [
       "android",
