--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@handsontable/angular": "^2.0.0",
     "@ionic-native/call-number": "^4.10.1",
     "@ionic-native/core": "4.7.0",
+    "@ionic-native/in-app-browser": "^4.12.0",
     "@ionic-native/native-storage": "^4.7.0",
     "@ionic-native/screen-orientation": "^4.9.2",
     "@ionic-native/splash-screen": "4.7.0",
@@ -39,6 +40,7 @@
     "cordova-android": "~7.0.0",
     "cordova-browser": "~5.0.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
     "cordova-plugin-nativestorage": "^2.3.1",
@@ -77,7 +79,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-nativestorage": {},
       "cordova-plugin-screen-orientation": {},
-      "mx.ferreyra.callnumber": {}
+      "mx.ferreyra.callnumber": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android",
