--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/core": "4.7.0",
     "@ionic-native/file": "^4.12.0",
     "@ionic-native/file-transfer": "^4.12.0",
+    "@ionic-native/in-app-browser": "^4.12.2",
     "@ionic-native/native-storage": "^4.7.0",
     "@ionic-native/screen-orientation": "^4.9.2",
     "@ionic-native/splash-screen": "4.7.0",
@@ -83,7 +84,8 @@
       "cordova-plugin-screen-orientation": {},
       "mx.ferreyra.callnumber": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-file-transfer": {}
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android",
